--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "./node_modules/.bin/babel-node scripts/devServer.js",
+    "clean-dist": "node_modules/.bin/rimraf ./dist && mkdir dist",
+    "build:html": "./node_modules/.bin/babel-node scripts/buildHtml.js",
+    "prebuild": "npm-run-all clean-dist build:html",
+    "build": "./node_modules/.bin/babel-node scripts/build.js"
   },
   "repository": {
     "type": "git",
@@ -16,17 +20,30 @@
     "url": "https://github.com/siffogh/webpack-practice/issues"
   },
   "homepage": "https://github.com/siffogh/webpack-practice#readme",
-  "dependencies": {
+  "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.22.0",
+    "colors": "^1.1.2",
+    "css-loader": "^0.27.1",
+    "eslint": "^3.17.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
     "express": "^4.15.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "fs": "0.0.1-security",
+    "moment": "^2.17.1",
+    "node-sass": "^4.5.0",
+    "npm-run-all": "^4.0.2",
     "path": "^0.12.7",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.1"
-  },
-  "devDependencies": {
+    "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1"
   }
 }
